Method .First() relpaced with .ToList() to fix form error.

--- a/Lab_task_1/KWZP_lab_23_04/KWZP_lab_23_04.csproj
+++ b/Lab_task_1/KWZP_lab_23_04/KWZP_lab_23_04.csproj
@@ -231,6 +231,9 @@
     <Compile Include="Urlop.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="vZatrudnienie.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Zamowienia.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
